# aemo_exercise

./: .gitignore  README.md  pyproject.toml
data/: PPA.xlsx
notebooks/: ppa.py
